2013-04-17  Werner Lemberg  <wl@gnu.org>

	[ftview] Minor GUI improvements.

	* src/ftview.c (event_hinting_engine_change,
	event_render_mode_change): Simplify.
	(Process_Event): Make keys `A'-`F' work only if AA is active.
	Disable keys `f' and `H' if in light hinting mode.
	(write_header): Ditto for header messages.

2013-04-17  Werner Lemberg  <wl@gnu.org>

	[ftview] Key `H' should be active only if we have a CFF.

	* src/ftview.c (Process_Event): Do it.

2013-04-13  Werner Lemberg  <wl@gnu.org>

	[ftview] Add keys `A'-`F' to select LCD mode.

	* src/ftview.c (event_help): Updated and rewritten to provide a
	two-column layout.
	(Process_Event): Handle `A'-`F'; former key `F' is now mapped to
	`L'.

2013-04-13  Werner Lemberg  <wl@gnu.org>

	[ftview] Key `H' switches CFF hinting engines.

	* src/ftview.c: Include FT_MODULE_H, FT_INTERNAL_OBJECTS_H,
	FT_INTERNAL_DRIVER_H, and FT_CFF_DRIVER_H.
	(N_HINTING_ENGINES): New macro.
	(status): New member `hinting_engine'.
	(event_help): Updated.
	(event_hinting_engine_change): New function.
	(Process_Event): Handle `H' key.
	(main): Set default CFF engine.

2013-04-21  Werner Lemberg  <wl@gnu.org>

	[graph/x11] Set _NET_WM_PID property.

	* graph/X11/x11/grx11.c: Include `sys/types.h', `unistd.h', and
	`XAtom.h'.
	(gr_x11_surface_init): Get process ID and set _NET_WM_PID property.

2013-03-27  Werner Lemberg  <wl@gnu.org>

	Makefile (COMPILE): Add `CPPFLAGS'.

	Two reasons:

	  (a) for orthogonality with freetype.mk
	  (b) users can pass additional stuff to the compiler

2013-03-24  Werner Lemberg  <wl@gnu.org>

	[ftview] Improve rendering mode switching.

	* src/ftview.c (status): Add `update' field.
	(Process_Event): Set `update' to 1 only if we really have to do an
	update.
	(main): Updated.

2013-03-24  Werner Lemberg  <wl@gnu.org>

	[ftview] Use `l' and `k' keys instead of `L' and `K'.

	* src/ftview.c (event_help, Process_Event): Implement it.

2013-03-24  Werner Lemberg  <wl@gnu.org>
